Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7408

multislot RPC support didn't declare write for reply_data object

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0, Lustre 2.9.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      For clients with multislot supported, it will call tgt_add_reply_data() update save reply data but this object(extended last_rcvd) is never declared for write. We should add the corresponding code in tgt_txn_start_cb().

            bzzz Alex Zhuravlev
            jay Jinshan Xiong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: