LU-7408 target: declare write for reply data

allocate an empty slot for multislot client in txn_start_cb()
and declare write for reply data object.

Signed-off-by: Jinshan Xiong <jinshan.xiong@intel.com>
Change-Id: I08466452e1e95b803f316abae777a8c8f4a8626e