lustre/target/tgt_lastrcvd.c
@@ -369,6 +369,13 @@ static inline struct lu_buf *tti_buf_lcd(struct tgt_thread_info *tti)
 	return &tti->tti_buf;
 }
 
+static inline struct lu_buf *tti_buf_lrd(struct tgt_thread_info *tti)
+{
+	tti->tti_buf.lb_buf = &tti->tti_lrd;
+	tti->tti_buf.lb_len = sizeof(tti->tti_lrd);
+	return &tti->tti_buf;
+}
+
 /**
  * Allocate in-memory data for client slot related to export.
  */
@@ -1071,7 +1078,6 @@ int tgt_add_reply_data(const struct lu_env *env, struct lu_target *tgt,
 		       struct thandle *th, bool update_lrd_file)
 {
 	struct lsd_reply_data	*lrd;
-	int	i;
 
 	lrd = &trd->trd_reply;
 	/* update export last transno */
@@ -1080,28 +1086,25 @@ int tgt_add_reply_data(const struct lu_env *env, struct lu_target *tgt,
 		ted->ted_lcd->lcd_last_transno = lrd->lrd_transno;
 	mutex_unlock(&ted->ted_lcd_lock);
 
-	/* find a empty slot */
-	i = tgt_find_free_reply_slot(tgt);
-	if (unlikely(i < 0)) {
-		CERROR("%s: couldn't find a slot for reply data: "
-		       "rc = %d\n", tgt_name(tgt), i);
-		RETURN(i);
-	}
-	trd->trd_index = i;
-
 	if (update_lrd_file) {
 		loff_t	off;
 		int	rc;
 
 		/* write reply data to disk */
-		off = sizeof(struct lsd_reply_header) + sizeof(*lrd) * i;
+		off = sizeof(struct lsd_reply_header) +
+				sizeof(*lrd) * trd->trd_index;
 		rc = tgt_reply_data_write(env, tgt, lrd, off, th);
 		if (unlikely(rc != 0)) {
 			CERROR("%s: can't update %s file: rc = %d\n",
 			       tgt_name(tgt), REPLY_DATA, rc);
 			RETURN(rc);
 		}
+	} else {
+		/* it reserved a reply slot in tgt_txn_start_cb(), clear it
+		 * now if it turns out no trans. */
+		tgt_clear_reply_slot(tgt, trd->trd_index);
 	}
+
 	/* add reply data to target export's reply list */
 	mutex_lock(&ted->ted_lcd_lock);
 	list_add(&trd->trd_list, &ted->ted_reply_list);
@@ -1113,7 +1116,7 @@ int tgt_add_reply_data(const struct lu_env *env, struct lu_target *tgt,
 	CDEBUG(D_TRACE, "add reply %p: xid %llu, transno %llu, "
 	       "tag %hu, client gen %u, slot idx %d\n",
 	       trd, lrd->lrd_xid, lrd->lrd_transno,
-	       trd->trd_tag, lrd->lrd_client_gen, i);
+	       trd->trd_tag, lrd->lrd_client_gen, trd->trd_index);
 	RETURN(0);
 }
 EXPORT_SYMBOL(tgt_add_reply_data);
@@ -1243,6 +1246,8 @@ static int tgt_last_rcvd_update(const struct lu_env *env, struct lu_target *tgt,
 			trd->trd_pre_versions[2] = pre_versions[2];
 			trd->trd_pre_versions[3] = pre_versions[3];
 		}
+
+		trd->trd_index = tsi->tsi_index;
 
 		rc = tgt_add_reply_data(env, tgt, ted, trd, th, write_update);
 		if (rc < 0)
@@ -1728,6 +1733,24 @@ int tgt_txn_start_cb(const struct lu_env *env, struct thandle *th,
 		rc = dt_declare_version_set(env, dto, th);
 	}
 
+	if (tgt_is_multimodrpcs_client(tsi->tsi_exp)) {
+		loff_t off;
+
+		rc = tgt_find_free_reply_slot(tgt);
+		if (rc < 0)
+			return rc;
+
+		tsi->tsi_index = rc;
+		dto = dt_object_locate(tgt->lut_reply_data, th->th_dev);
+
+		off = sizeof(struct lsd_reply_header) +
+				sizeof(struct lsd_reply_data) * rc;
+		tti_buf_lrd(tti);
+		rc = dt_declare_record_write(env, dto, &tti->tti_buf, off, th);
+		if (rc)
+			return rc;
+	}
+
 	return rc;
 }
 
@@ -1852,6 +1875,11 @@ int tgt_reply_data_init(const struct lu_env *env, struct lu_target *tgt)
 				       tgt_name(tgt), REPLY_DATA, rc);
 				GOTO(out, rc);
 			}
+
+			/* skip empty slot. Empty slots may be generated because
+			 * indices are reserved in tgt_txn_start_cb() */
+			if (lrd->lrd_xid == 0 && lrd->lrd_transno == 0)
+				continue;
 
 			exp = cfs_hash_lookup(hash, &lrd->lrd_client_gen);
 			if (exp == NULL) {
